30-sg-rules/main.tf
# DATABASE - MONGODB SG RULES
resource "aws_security_group_rule" "mongodb_bastion" {
  type   = "ingress"
  security_group_id = local.mongodb_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "mongodb_catalogue" {
  type   = "ingress"
  security_group_id = local.mongodb_sg_id
  source_security_group_id = local.catalogue_sg_id
  from_port   = 27017
  to_port     = 27017
  protocol = "tcp"
}

resource "aws_security_group_rule" "mongodb_user" {
  type   = "ingress"
  security_group_id = local.mongodb_sg_id
  source_security_group_id = local.user_sg_id
  from_port   = 27017
  to_port     = 27017
  protocol = "tcp"
}


# DATABASE - REDIS SG RULES
resource "aws_security_group_rule" "redis_bastion" {
  type   = "ingress"
  security_group_id = local.redis_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "redis_user" {
  type   = "ingress"
  security_group_id = local.redis_sg_id
  source_security_group_id = local.user_sg_id
  from_port   = 6379
  to_port     = 6379
  protocol = "tcp"
}

resource "aws_security_group_rule" "redis_cart" {
  type   = "ingress"
  security_group_id = local.redis_sg_id
  source_security_group_id = local.cart_sg_id
  from_port   = 6379
  to_port     = 6379
  protocol = "tcp"
}


# DATABASE - MYSQL SG RULES
resource "aws_security_group_rule" "mysql_bastion" {
  type   = "ingress"
  security_group_id = local.mysql_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "mysql_shipping" {
  type   = "ingress"
  security_group_id = local.mysql_sg_id
  source_security_group_id = local.shipping_sg_id
  from_port   = 3306
  to_port     = 3306
  protocol = "tcp"
}


# DATABASE - RABBITMQ SG RULES
resource "aws_security_group_rule" "rabbitmq_bastion" {
  type   = "ingress"
  security_group_id = local.rabbitmq_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "rabbitmq_payment" {
  type   = "ingress"
  security_group_id = local.rabbitmq_sg_id
  source_security_group_id = local.payment_sg_id
  from_port   = 5672
  to_port     = 5672
  protocol = "tcp"
}


# BACKEND SERVICES - CATALOGUE SG RULES
resource "aws_security_group_rule" "catalogue_bastion" {
  type   = "ingress"
  security_group_id = local.catalogue_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "catalogue_backend_alb" {
  type   = "ingress"
  security_group_id = local.catalogue_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port   = 8080
  to_port     = 8080
  protocol = "tcp"
}


# BACKEND SERVICES - USER SG RULES
resource "aws_security_group_rule" "user_bastion" {
  type   = "ingress"
  security_group_id = local.user_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "user_backend_alb" {
  type   = "ingress"
  security_group_id = local.user_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port   = 8080
  to_port     = 8080
  protocol = "tcp"
}


# BACKEND SERVICES - CART SG RULES
resource "aws_security_group_rule" "cart_bastion" {
  type   = "ingress"
  security_group_id = local.cart_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "cart_backend_alb" {
  type   = "ingress"
  security_group_id = local.cart_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port   = 8080
  to_port     = 8080
  protocol = "tcp"
}


# BACKEND SERVICES - SHIPPING SG RULES
resource "aws_security_group_rule" "shipping_bastion" {
  type   = "ingress"
  security_group_id = local.shipping_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "shipping_backend_alb" {
  type   = "ingress"
  security_group_id = local.shipping_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port   = 8080
  to_port     = 8080
  protocol = "tcp"
}


# BACKEND SERVICES - PAYMENT SG RULES
resource "aws_security_group_rule" "payment_bastion" {
  type   = "ingress"
  security_group_id = local.payment_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "payment_backend_alb" {
  type   = "ingress"
  security_group_id = local.payment_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port   = 8080
  to_port     = 8080
  protocol = "tcp"
}


# BACKEND ALB SG RULES
resource "aws_security_group_rule" "backend_alb_bastion" {
  type   = "ingress"
  security_group_id = local.backend_alb_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "backend_alb_frontend" {
  type   = "ingress"
  security_group_id = local.backend_alb_sg_id
  source_security_group_id = local.frontend_sg_id
  from_port   = 80
  to_port     = 80
  protocol = "tcp"
}

resource "aws_security_group_rule" "backend_alb_cart" {
  type   = "ingress"
  security_group_id = local.backend_alb_sg_id
  source_security_group_id = local.cart_sg_id
  from_port   = 80
  to_port     = 80
  protocol = "tcp"
}

resource "aws_security_group_rule" "backend_alb_shipping" {
  type   = "ingress"
  security_group_id = local.backend_alb_sg_id
  source_security_group_id = local.shipping_sg_id
  from_port   = 80
  to_port     = 80
  protocol = "tcp"
}

resource "aws_security_group_rule" "backend_alb_payment" {
  type   = "ingress"
  security_group_id = local.backend_alb_sg_id
  source_security_group_id = local.payment_sg_id
  from_port   = 80
  to_port     = 80
  protocol = "tcp"
}


# FRONTEND SG RULES
resource "aws_security_group_rule" "frontend_bastion" {
  type   = "ingress"
  security_group_id = local.frontend_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "frontend_frontend_alb" {
  type   = "ingress"
  security_group_id = local.frontend_sg_id
  source_security_group_id = local.frontend_alb_sg_id
  from_port   = 80
  to_port     = 80
  protocol = "tcp"
}


# FRONTEND ALB SG RULES
resource "aws_security_group_rule" "frontend_alb_public" {
  type   = "ingress"
  security_group_id = local.frontend_alb_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 443
  to_port     = 443
  protocol = "tcp"
}


# BASTION SG RULES
resource "aws_security_group_rule" "bastion_laptop" {
  type   = "ingress"
  security_group_id = local.bastion_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}


# OPEN VPN SG RULES
resource "aws_security_group_rule" "openvpn_public" {
  type   = "ingress"
  security_group_id = local.openvpn_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 22
  to_port     = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "openvpn_443" {
  type   = "ingress"
  security_group_id = local.openvpn_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 443
  to_port     = 443
  protocol = "tcp"
}

resource "aws_security_group_rule" "openvpn_943" {
  type   = "ingress"
  security_group_id = local.openvpn_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 943
  to_port     = 943
  protocol = "tcp"
}

resource "aws_security_group_rule" "openvpn_1194" {
  type   = "ingress"
  security_group_id = local.openvpn_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port   = 1194
  to_port     = 1194
  protocol = "tcp"
}

# ALL COMPONENTS ALLOWING CONNECTION FROM OPEN VPN
resource "aws_security_group_rule" "components_openvpn" {
  for_each = local.vpn_ingress_rules
  type   = "ingress"
  security_group_id = each.value.sg_id
  source_security_group_id = local.openvpn_sg_id
  from_port   = each.value.port
  to_port     = each.value.port
  protocol = "tcp"
}
